removed svelte warnings and fixed minor dark mode css issues

--- a/src/app.css
+++ b/src/app.css
@@ -67,21 +67,6 @@ button:focus:not(:focus-visible) {
 }
 
 ::-webkit-scrollbar {
-	width: 5px;
-	border-radius: 20px;
+	display: none;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-	background: #f9f9f9;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-	background: var(--text-color);
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-	background: #555;
-}
